--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 
 <nav class="navbar container">
-  <a href="./" class="brand">StrongWords</a>
+  <a href="/" class="brand">StrongWords</a>
   <div class="burger" id="burger">
       <span class="burger-line"></span>
       <span class="burger-line"></span>
